Beta-v0.2: Fixed categories not visible issue and Added a "Scroll to Top" button on scroll.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,11 +18,13 @@
         padding: 12px 24px;
     }
     .categories {
+        padding: 40px 5%;
+        display: flex;
         flex-direction: column;
         align-items: center;
     }
     .category {
-        width: 80%;
+        width: 90%;
         text-align: center;
     }
     .category img {
